# ToDo

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: lint-python.yml  lint-ts.yml  lint.yml  test-python.yml  test.yml
access/: adapters.py  apps.py  cases.py  confirmation.py  core.py  forms.py  input.py  payload.py  ports.py  services.py  tools.py  urls.py  utils.py  views.py
access/confirmation/: adapters.py  core.py  facade.py
access/templates/: access-recovery-by-email.html  access-recovery-by-name.html  base.html  login.html  registration.html
accounts/: forms.py  services.py  urls.py  views.py
accounts/templates/: access-recovery-by-email.html  access-recovery-by-name.html  access-recovery.html  form-base.html  login.html  registration.html
apps/access/: README.md  adapters.py  admin.py  cases.py  errors.py  forms.py  input.py  lib.py  models.py  rules.py  services.py  sugar.py  types_.py  ui.py  urls.py  utils.py  views.py
apps/confirmation/: README.md  adapters.py  apps.py  cases.py  config.py  forms.py  input.py  lib.py  output.py  services.py  tests.py  types_.py  ui.py  urls.py  utils.py  views.py
apps/map/: README.md  (+9 more)
assets/: colors.toml  design.drawio
config/: settings.py  urls.py
confirmation/: adapters.py  cases.py  contract.py  core.py  forms.py  output.py  payload.py  services.py  urls.py  views.py
core/: adapters.py  admin.py  tools.py  transactions.py  types.py
decor/: design.drawio
scripts/: entrypoint.sh  recompile-ts.sh  remove-js.sh  remove-sass-results.sh  start-dev-server.sh  start.sh
shared/: adapters.py  admin.py  apps.py  models.py  tools.py  transactions.py  types.py  types_.py  views.py
tasks/: admin.py  models.py  urls.py  views.py
todo/: asgi.py  settings.py  urls.py  wsgi.py
(+205 files in other folders)
